# moo-conformance-tests

./: .gitignore  CLAUDE.md  LICENSE  README.md  notes-benchmark-barn-vs-toast.md  pyproject.toml
bench/: bench.py  run_bench.sh
docs/: COMMAND_PARSER_TESTS.md  CONVERTING.md  TOASTSTUNT.md  YAML_SCHEMA.md
prompts/: coverage-background-threads.md  coverage-exec-portable.md  coverage-final-verifier.md  coverage-network-matrix.md  coverage-optional-extensions.md  coverage-publish.md  coverage-read-stdin.md  coverage-records-commit.md
reports/: barn-toast-deviation-conformance-checklist.md  barn-vm-optimization-20260619.md  benchmark-barn-vs-toast-20260619.md  coverage-background-threads-report.md  coverage-exec-portable-report.md  coverage-final-verifier-report.md  coverage-foreman-notes.md  coverage-network-matrix-report.md  coverage-optional-extensions-report.md  coverage-publish-report.md  coverage-read-stdin-report.md  coverage-records-commit-report.md  toast-builtin-coverage.md
src/moo_conformance/: __init__.py  __main__.py  builtin_coverage.py  builtin_io_generator.py  capabilities.py  cli.py  conftest.py  lint_duplicates.py  moo_types.py  plugin.py  profile_gate.py  runner.py  schema.py  server.py  test_conformance.py  transport.py
src/moo_conformance/_db/: Test.db
src/moo_conformance/_exec_fixtures/: sleep  sleep.bat  test_args  test_args.bat  test_io  test_io.bat  test_with_sleep  test_with_sleep.bat
src/moo_conformance/_tests/basic/: list.yaml  (+6 more)
tests/: conftest.py  test_builtin_coverage.py  test_conformance.py  test_lint_duplicates.py  test_managed_server.py  test_option_detection.py  test_profile_gate.py  test_schema.py
(+459 files in other folders)
