[project]
name = "moo-conformance-tests"
version = "0.1.0"
description = "Conformance test suite for MOO language implementations"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
keywords = ["moo", "mud", "testing", "conformance"]
authors = [
    {name = "MongooseMoo"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pyyaml>=6.0",
    "pytest>=7.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/MongooseMoo/moo-conformance-tests"
Repository = "https://github.com/MongooseMoo/moo-conformance-tests"
Issues = "https://github.com/MongooseMoo/moo-conformance-tests/issues"

[project.entry-points.pytest11]
moo_conformance = "moo_conformance.plugin"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["moo_conformance"]

[tool.setuptools.package-data]
moo_conformance = [
    "_tests/**/*.yaml",
    "_db/*.db",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
